added csrf token

--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -5,13 +5,16 @@
 {% block body %}
     <h1>All Posts</h1>
     <div>
+        {% if user.is_authenticated %}
         <div>
             <h2>New Post</h2>
             <form id="compose-form">
+                {% csrf_token %}
                 <textarea class="form-control" id="compose-body" placeholder="Body"></textarea>
                 <input type="submit" class="btn btn-primary"/>
             </form>
         </div>
+        {% endif %}
         <div id="posts-container">
 
         </div>
